--- a/index.html
+++ b/index.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Startup</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Presentation.SA</title>
+</head>
+<body>
+    <!--Hello section-->
+    <section id="hello">
+        <div class="hello container">
+        <div>
+            <h1>Welcome to your (hopefully working) presentation tool!</h1>
+            <a href="slides.html" type="button" class="cta">Get Started</a>
+        </div>
+        </div>
+    </section>
+     <!--End of hello section-->
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
-    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
-    <!-- Your own stylesheet -->
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
-    <div class="container d-flex align-items-center h-100">
-      <div class="row">
-        <header class="text-center col-12">
-          <h1><strong>THE BIGGEST STARTUP EVENT OF THE YEAR</strong></h1>
-        </header>
-        <div class="buffer col-12"></div>
-        <section class="text-center col-12">
-          <hr>
-          <button class="btn btn-primary btn-xl">Find out more</button>
-        </section>
-      </div>
-    </div>
-  </body>
+</body>
 </html>
